of keeping the log up-to-date, and reduces the change for error.  Note that most 
bug fixes etc. from the stand-alone version apply to the subsequent Moodle 
version release;  similarly, some fixes to the stand-alone version first appear 
in a Moodle release.  Keep in mind that often the Moodle release is the most
up-to-date version of the Marginalia library.

2015-04-06

Smartquote isn't working. Turn it off for now.


2014-09-27

Update to work with Moodle 2.7.


2013-06-14

Update to work with Moodle 2.5.

Removed YUI code, which includes autocomplete for margin notes.


2013-03-08

Branch Moodle version, as some improvements in others are buggy.


2011-05 (Moodle)
  This is a major release, focusing on three areas:  Moodle 2.0 integration,
  a minimized patch footprint, and a streamlined user interface.  It was
  delayed chiefly because of a lack of resources for testing (on different
  browsers and for upgrades from previous versions).
  
  * This release works with and requires Moodle 2.  I will no longer be adding
    features for Moodle 1.9.
  * The patch footprint is dramatically smaller.  It doesn't touch anything
    outside mod/forum.
  * The create annotation button in the margin has been eliminated.  Clicking
    on a blank space in the margin performs the create annotation function now.
  * The public/private button has been replaced by a drop-down sheet menu at
    the top of the page.  This makes many things possible in the future.  It
    also establishes the principle that if you and I are looking at the same
    sheet (public or private or any future one) our screens should look almost
    exactly the same and we should both have the same sense of how much space
    remains for margin notes.
  * That menu also includes the summary link and help link to minimize screen
    real-estate needed and clarify the relatioship of those controls.
  * Annotation controls are only displayed when the mouse hovers over the note.