@@ -1,48 +1,0 @@
-{
-    "browser":      true,
-    "yui":          true,
-    "bitwise":      true,
-    "curly":        true,
-    "eqeqeq":       true,
-    "forin":        false,
-    "immed":        true,
-    "newcap":       true,
-    "noarg":        true,
-    "noempty":      true,
-    "nomen":        false,
-    "onevar":       false,
-    "plusplus":     false,
-    "regexp":       false,
-    "strict":       false,
-    "trailing":     true,
-    "unused":       true,
-    "white":        false,
-    "asi":          false,
-    "boss":         false,
-    "debug":        false,
-    "eqnull":       false,
-    "es5":          false,
-    "esnext":       false,
-    "evil":         false,
-    "expr":         false,
-    "funcscope":    false,
-    "globalstrict": false,
-    "iterator":     false,
-    "lastsemic":    false,
-    "laxbreak":     true,
-    "laxcomma":     false,
-    "loopfunc":     false,
-    "multistr":     false,
-    "onecase":      false,
-    "proto":        false,
-    "regexdash":    false,
-    "scripturl":    false,
-    "shadow":       false,
-    "smarttabs":    false,
-    "sub":          false,
-    "supernew":     false,
-    "maxerr":       500,
-    "maxlen":       180,
-    "passfail":     false,
-    "latedef":      true
-}
