@@ -1,5 +1,0 @@
-{
-    "coverage": false,
-    "lint": "config",
-    "clean": true
-}
